

[project]
name = "stirling_pdf_client"
version = "0.1.0"
description = "A Python client for the Stirling PDF API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
]

[tool.uv]
allow-insecure-host = ["pypi.tuna.tsinghua.edu.cn"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[project.optional-dependencies]
dev = ["ruff"]

